--- a/三角形/first-Demo5.html
+++ b/三角形/first-Demo5.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>webgl第25课-彩色三角形</title>
+    <title>webgl-Demo5-彩色三角形</title>
 	<script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
     <script src="./lib/cuon-utils.js"></script>
