--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="p-5">
               <div class="fs-2 mb-3"> <i class="fas fa-server"></i> </div>
               <a href="./file.html " >
-              <h4 class="mb-3">Homework</h4>
+              <h4 class="mb-3">计算机图形学</h4>
             </a>
               <p class="text-secondary">Share your computer graphics experiments and assignments online, want to know more about it?</p>
             </div>
