--- a/file.html
+++ b/file.html
@@ -54,5 +54,11 @@
     </tr>
   </tbody>
 </table>
+      <h3 id="第2章">第二次实验</h3>
+      <table>
+        <tbody>
+         <th><a href="../三角形/second-Draw.html">Draw-Demo</a></th>
+        </tdody>
+       </table>
   </body>
 </html>
