--- a/file.html
+++ b/file.html
@@ -46,18 +46,18 @@
 <table>
   <tbody>
     <tr>
-      <th><a href="../三角形/first-Demo1.html">first-Demo1</a></th>
-      <th><a href="../三角形/first-Demo2.html">first-Demo2</a></th>
-      <th><a href="../三角形/first-Demo3.html">first-Demo3</a></th>
-      <th><a href="../三角形/firsr-Demo4.html">first-Demo4</a></th>
-      <th><a href="../三角形/first-Demo5.html">first-Demo5</a></th>
+      <th><a href="../三角形/first-Demo1.html">first-Demo1</a></th>&nbsp;
+      <th><a href="../三角形/first-Demo2.html">first-Demo2</a></th>&nbsp;
+      <th><a href="../三角形/first-Demo3.html">first-Demo3</a></th>&nbsp;
+      <th><a href="../三角形/firsr-Demo4.html">first-Demo4</a></th>&nbsp;
+      <th><a href="../三角形/first-Demo5.html">first-Demo5</a></th>&nbsp;
     </tr>
   </tbody>
 </table>
-      <h3 id="第2章">第二次实验</h3>
+      <h3 id="第2章">第2次实验</h3>
       <table>
         <tbody>
-         <th><a href="../三角形/second-Draw.html">Draw-Demo</a></th>
+         <th><a href="../三角形/second-Draw.html">Draw-Demo1</a></th>
         </tdody>
        </table>
   </body>
