--- a/file.html
+++ b/file.html
@@ -57,7 +57,8 @@
       <h3 id="第2章">第2次实验</h3>
       <table>
         <tbody>
-         <th><a href="../三角形/second-Draw.html">Draw-Demo1</a></th>
+         <th><a href="../三角形/second-Draw1.html">Draw-Demo1</a></th>&nbsp;
+         <th><a href="../三角形/second-Draw2.html">Draw-Demo2</a></th>&nbsp;
         </tdody>
        </table>
   </body>
