--- a/file.html
+++ b/file.html
@@ -64,8 +64,8 @@
     <table>
       <h4>Sierpinski Gasket in ...</h4>
         <tbody>
-         <th><a href="../三角形/demo_1.html">SG-Demo1</a></th>&nbsp;
-         <th><a href="../三角形/demo_2.html">SG-Demo2</a></th>&nbsp;
+         <th><a href="../三角形/demo1.html">SG-Demo1</a></th>&nbsp;
+         <th><a href="../三角形/demo2.html">SG-Demo2</a></th>&nbsp;
          <th><a href="../三角形/demo3.html">SG-Demo3</a></th>&nbsp;
          <th><a href="../三角形/demo4.html">SG-Demo4</a></th>&nbsp;
          <th><a href="../三角形/demo5.html">SG-Demo5</a></th>&nbsp;
