--- a/file.html
+++ b/file.html
@@ -70,9 +70,9 @@
          <th><a href="../三角形/demo4.html">SG-Demo4</a></th>&nbsp;&nbsp;
          <th><a href="../三角形/demo5.html">SG-Demo5</a></th>&nbsp;&nbsp;
         </tdody>
-     <h4 id="第三章">实验四</h4>
+     <h3>实验四</h3>
         <tbody>
-         <th><a href="../三角形/DM-demo1.html">DM-Demo1</a></th>&nbsp;&nbsp;
+         <th><a href="../三角形/实验四/DM-demo1.html">DM-Demo1</a></th>&nbsp;&nbsp;
         </tdody>
      </table>
   </body>
