--- a/file.html
+++ b/file.html
@@ -83,5 +83,18 @@
        </tr> 
     </tdody>
    </table>
+
+<h3>实验五</h3>
+  <table>
+     <tbody>
+       <tr>
+         <th><a href="../三角形/实验五/a.html">a-Demo1</a></th>&nbsp;&nbsp;
+         <th><a href="../三角形/实验五/b.html">b-Demo2</a></th>&nbsp;&nbsp;
+         <th><a href="../三角形/实验五/c.html">c-Demo3</a></th>&nbsp;&nbsp;
+         <th><a href="../三角形/实验五/d.html">d-Demo4</a></th>&nbsp;&nbsp;
+         <th><a href="../三角形/实验五/e.html">e-Demo5</a></th>&nbsp;&nbsp;
+       </tr> 
+    </tdody>
+   </table>
   </body>
 </html>
