--- a/file.html
+++ b/file.html
@@ -96,5 +96,13 @@
        </tr> 
     </tdody>
    </table>
+<h3>实验六</h3>
+  <table>
+     <tbody>
+       <tr>
+         <th><a href="../三角形/实验六/model-a.html">model-demo1</a></th>&nbsp;&nbsp;
+       </tr> 
+    </tdody>
+   </table>
   </body>
 </html>
